# fashionDescGenerator

./: .gitignore  Dockerfile  LICENSE  README.md  eval.py  pyproject.toml
scripts/: data.ipynb  helper_datasets.py
src/: generator.py  model.py  optimizer.py  trainer.py
src/dataset/: dataset.py  utils.py
src/models/: cnn.py
