[project]
name = "sem-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "h5py>=3.15.1",
    "huggingface-hub>=1.2.3",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pillow>=12.0.0",
    "timm>=1.0.22",
    "torch",
    "torchmetrics>=1.8.2",
    "torchvision",
]
